feat(design): implement new look and feel
